--- a/任务二/index.html
+++ b/任务二/index.html
@@ -11,23 +11,23 @@
         </div>
     </div>
     <script>
-        var beginPositionX=Math.ceil((Math.random()*39))*20;
-        var beginPositionY=Math.ceil((Math.random()*29))*20;
+        var beginPositionX=parseInt((Math.random()*39))*20;
+        var beginPositionY=parseInt((Math.random()*29))*20;
         $(".Snake").css({'left':beginPositionX ,'top':beginPositionY});
         $(document).keydown(function(event){
-            if(event.keyCode == 37&& beginPositionX>1){
+            if(event.keyCode == 37 && beginPositionX>0){
                 beginPositionX=beginPositionX-20;
                 $(".Snake").css({'left':(beginPositionX)});
             }//left
-            if(event.keyCode == 38){
+            if(event.keyCode == 38 && beginPositionY>0){
                 beginPositionY=beginPositionY-20;
                 $(".Snake").css({'top':(beginPositionY)});
             }//up
-            if(event.keyCode == 39){
+            if(event.keyCode == 39 && beginPositionX<780){
                 beginPositionX=beginPositionX+20;
                 $(".Snake").css({'left':(beginPositionX)});
             }//right
-            if(event.keyCode == 40){
+            if(event.keyCode == 40 && beginPositionY<580){
                 beginPositionY=beginPositionY+20;
                 $(".Snake").css({'top':(beginPositionY)});
             }//down
