载入或重置时随机生成食物

--- a/任务二/index.html
+++ b/任务二/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div id="World">
-        <div class="Snake" id="Head">
-        </div>
+        <div class="Snake" id="Head"></div>
+        <div class="Food" id="Apple"></div>
     </div>
 
     <script>
