贪吃蛇碰到食物时：食物刷新，贪吃蛇长度+1

--- a/任务二/index.html
+++ b/任务二/index.html
@@ -6,9 +6,9 @@
     </script>
 </head>
 <body>
-    <div id="World">
-        <div class="Snake" id="Head"></div>
+<div id="World">
         <div class="Food" id="Apple"></div>
+        <div class="Snake" id="Head"></div>
     </div>
 
     <script>
@@ -17,6 +17,7 @@
         $("#World").css({'width':worldSizeX,'height': worldSizeY});
     </script>
     <script language="JavaScript" src="Snake.js"></script> 
+    <script language="JavaScript" src="Food.js"></script> 
     <script language="JavaScript" src="Game.js"></script>
 </body>
 </html>
