显示贪吃蛇当前长度

--- a/任务二/index.html
+++ b/任务二/index.html
@@ -9,12 +9,15 @@
 <div id="World">
         <div class="Food" id="Apple"></div>
         <div class="Snake" id="Head"></div>
+        
     </div>
+    <div id="theScore"></div>
 
     <script>
         var worldSizeX=800;
         var worldSizeY=600;
         $("#World").css({'width':worldSizeX,'height': worldSizeY});
+        $("#theScore").css({'left':(worldSizeX/2-25),'top':(worldSizeY+50)});
     </script>
     <script language="JavaScript" src="Snake.js"></script> 
     <script language="JavaScript" src="Food.js"></script> 
