--- a/任务二/index.html
+++ b/任务二/index.html
@@ -6,7 +6,8 @@
     </script>
 </head>
 <body>
-<div id="World">
+    <div id="World">
+        <!-- 这里为什么既要取一个class 又取一个id 既然是唯一的东西id就够了吧-->
         <div class="Food" id="Apple"></div>
         <div class="Snake" id="Head"></div>
         
@@ -14,6 +15,7 @@
     <div id="theScore"></div>
 
     <script>
+        //这段和world重复了
         var worldSizeX=800;
         var worldSizeY=600;
         $("#World").css({'width':worldSizeX,'height': worldSizeY});
