实现吃了食物后自身长度+1

--- a/任务二/index.html
+++ b/任务二/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div id="World">
-        <!-- 这里为什么既要取一个class 又取一个id 既然是唯一的东西id就够了吧-->
-        
-        
+        <div class="Snake"></div>
+        <div class="Food"></div>
+        <div id="body"+"1"></div>
     </div>
     <div id="theScore"></div>
     <script>
