删除index.html下多余代码

--- a/任务二/index.html
+++ b/任务二/index.html
@@ -6,11 +6,8 @@
     </script>
 </head>
 <body>
-    <div id="World">
-    </div>
+    <div id="World"/>
     <div id="theScore"></div>
-    <script>
-    </script>
     <script language="JavaScript" src="Snake.js"></script> 
     <script language="JavaScript" src="Food.js"></script> 
     <script language="JavaScript" src="Game.js"></script>
