面对对象建议

--- a/任务二/index.html
+++ b/任务二/index.html
@@ -2,14 +2,13 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="jquery-3.2.1.min.js">
-    </script>
+    <script src="jquery-3.2.1.min.js"></script>
 </head>
 <body>
     <div id="World"/>
     <div id="theScore"></div>
-    <script language="JavaScript" src="Snake.js"></script> 
-    <script language="JavaScript" src="Food.js"></script> 
-    <script language="JavaScript" src="Game.js"></script>
+    <script src="Snake.js"></script> 
+    <script src="Food.js"></script> 
+    <script src="Game.js"></script>
 </body>
 </html>
