--- a/任务二/index.html
+++ b/任务二/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id="World"/>
-    <div id="theScore"></div>
+    <div id="theScore"/>
     <script src="Snake.js"></script> 
     <script src="Food.js"></script> 
     <script src="Game.js"></script>
