--- a/任务二/index.html
+++ b/任务二/index.html
@@ -10,5 +10,8 @@
     <script src="Snake.js"></script> 
     <script src="Food.js"></script> 
     <script src="Game.js"></script>
+    <script>
+        gameStart();
+    </script> 
 </body>
 </html>
