修复回头bug，加一个积分表

--- a/任务二/index.html
+++ b/任务二/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <div id="World" />
-    <div id="theScore" />
+    <div id="Score"></div>
+    <div class="Score" id="theScore" ></div>
+    <div class="p" id="p1">1p</div>
+    <div class="Score" id="theScore2" ></div>
+    <div class="p" id="p2">2p</div>
     <script src="Snake.js"></script> 
     <script src="Food.js"></script> 
     <script src="Game.js"></script>
