--- a/vue/index.html
+++ b/vue/index.html
@@ -6,28 +6,9 @@
 </head>
 
 <body>
-    <ol id="example">
-        <todo-item
-            v-for="item in groceryList"
-            v-bind:todo="item"
-            v-bind:key="item.id">
-        </todo-item>
-    </ol>
+    <div></div>
     <script>
-        Vue.component('todo-item', {
-            props: ['todo'],
-            template: '<li>{{todo.text}}</li>'
-        })
-        new Vue({
-            el: '#example',
-            data: {
-                groceryList: [
-                    { id: 0, text: '蔬菜' },
-                    { id: 1, text: '奶酪' },
-                    { id: 2, text: '随便其他什么人吃的东西' }
-                ]
-            }
-        })
+
     </script>
 </body>
 
