--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,8 @@
 </head>
 <style>
     canvas{
-        border: 2px solid skyblue;
+        border: 2px solid lightskyblue;
+        background-color: lightcyan;
     }
 </style>
 <body>
