--- a/q6(vue-webpack)/index.html
+++ b/q6(vue-webpack)/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="shortcut icon" type="image/x-ico" href="./src/favicon.ico"/>
+    <title>哔哩哔哩 (゜-゜)つロ 干杯~-bilibili</title>
 </head>
 <body>
     <div id="appIndex">
