解决了webpack图片路径错误的bug

--- a/q6(vue-webpack)/index.html
+++ b/q6(vue-webpack)/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/x-ico" href="./src/favicon.ico"/>
     <title>哔哩哔哩 (゜-゜)つロ 干杯~-bilibili</title>
-    <script src="./dist/jquery-3.2.1.min.js"></script>
+    <script src="./jquery-3.2.1.min.js"></script>
 </head>
 <body>
     <div id="appIndex">
