--- a/q7/index.html
+++ b/q7/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-ico" href="./src/favicon.ico"/>
+    <!-- <link rel="shortcut icon" type="image/x-ico" href="./src/favicon.ico"/> -->
     <title>温州耐洁阀芯</title>
     <script src="./jquery-3.2.1.min.js"></script>
 </head>
