--- a/q8/index.html
+++ b/q8/index.html
@@ -5,6 +5,8 @@
         <script src="./js/three.js"></script>
         <script src="./js/Stats.js"></script>
         <script src="./js/OrbitControls.js"></script>
+        <script src="./js/FBXLoader.js"></script>
+        <script src="./js/Inflate.min.js"></script>
     </head>
     <body>
         <script src="./dist/build.js"></script>
